--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -11,17 +11,17 @@
     </ContentPage.Resources>
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Somar"/>
-        <ToolbarItem Text="Adicionar"/>
+        <ToolbarItem Text="Somar" Clicked="ToolbarItem_Clicked_Somar"/>
+        <ToolbarItem Text="Adicionar" Clicked="ToolbarItem_Clicked_Adicionar"/>
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
         <VerticalStackLayout>
-            <SearchBar x:Name="text_search" Margin="-10, 0, 0, 0" Placeholder="Busca de Produtos"/>
+            <SearchBar x:Name="text_search" Margin="-10, 0, 0, 0" Placeholder="Busca de Produtos" TextChanged="text_search_TextChanged"/>
 
-            <RefreshView x:Name="ref_carregando" IsRefreshing="False"/>
+            <RefreshView x:Name="ref_carregando" IsRefreshing="False" Refreshing="ref_carregando_Refreshing"/>
 
-            <ListView x:Name="list_produtos">
+            <ListView x:Name="list_produtos" ItemSelected="list_produtos_ItemSelected">
                 <ListView.Header>
                     <Grid ColumnDefinitions="3*, *, *, *">
                         <Label Grid.Column="0" Text="Produto"/>
@@ -35,7 +35,7 @@
                         <ViewCell>
 
                             <ViewCell.ContextActions>
-                                <MenuItem Text="Remover"/>
+                                <MenuItem Text="Remover" Clicked="MenuItem_Clicked_Remover"/>
                             </ViewCell.ContextActions>
                             <Grid RowDefinitions="Auto"
                                   ColumnDefinitions="*, Auto, Auto">
