--- a/Views/EditarProduto.xaml
+++ b/Views/EditarProduto.xaml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiListaCompras.Views.NovoProduto"
-             Title="NovoProduto">
+             x:Class="MauiListaCompras.Views.EditarProduto"
+             Title="EditarProduto">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Salvar" Clicked="ToolbarItem_Clicked"/>
+
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
+
         <VerticalStackLayout>
             <Label Text="Descrição:"/>
-            <Entry x:Name="text_descricao"/>
-            
+            <Entry x:Name="text_descricao" Text="{Binding Descricao}"/>
+
             <Label Text="Quantidade:"/>
-            <Entry x:Name="text_quantidade"/>
-            
+            <Entry x:Name="text_quantidade" Text="{Binding Quantidade}"/>
+
             <Label Text="Preço:"/>
-            <Entry x:Name="text_preco"/>
-
-
+            <Entry x:Name="text_preco" Text="{Binding Preco}"/>
         </VerticalStackLayout>
+        
     </ContentPage.Content>
-    
 </ContentPage>
